hphp/hack/test/typecheck/dynamic/dynamic_error_message1.php.constraint_method_call.exp
WARN: File "dynamic_error_message1.php", line 4, characters 12-12:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "dynamic_error_message1.php", line 3, characters 21-27:
  This expression has type `dynamic`
ERROR: File "dynamic_error_message1.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
  File "dynamic_error_message1.php", line 3, characters 34-36:
  Expected `int`
  File "dynamic_error_message1.php", line 4, characters 12-12:
  But got `dynamic`, the result of accessing a property of a `dynamic` type
