hphp/hack/test/typecheck/dynamic/dynamic_error_message1.php
<?hh

function testObjGet(dynamic $x): int {
  $y = $x->y;
  return $y;
}
